Shorten categories' names.

--- a/index.htm
+++ b/index.htm
@@ -47,12 +47,12 @@
 				// data
 				var modulesData = [
 					{
-						title: 'Cloud Modules',
+						title: 'Cloud',
 						modules: [
 						]
 					},
 					{
-						title: 'Commands Modules',
+						title: 'Commands',
 						modules: [
 							{
 								name: 'command',
@@ -183,17 +183,17 @@
 						]
 					},
 					{
-						title: 'Database Modules',
+						title: 'Database',
 						modules: [
 						]
 					},
 					{
-						title: 'Files Modules',
+						title: 'Files',
 						modules: [
 						]
 					},
 					{
-						title: 'Inventory Modules',
+						title: 'Inventory',
 						modules: [
 							{
 								name: 'add_host',
@@ -227,7 +227,7 @@
 						]
 					},
 					{
-						title: 'Messaging Modules',
+						title: 'Messaging',
 						modules: [
 							{
 								name: 'rabbitmq_parameter',
@@ -262,22 +262,22 @@
 						]
 					},
 					{
-						title: 'Monitoring Modules',
+						title: 'Monitoring',
 						modules: [
 						]
 					},
 					{
-						title: 'Network Modules',
+						title: 'Network',
 						modules: [
 						]
 					},
 					{
-						title: 'Notification Modules',
+						title: 'Notification',
 						modules: [
 						]
 					},
 					{
-						title: 'Packaging Modules',
+						title: 'Packaging',
 						modules: [
 							{
 								name: 'apt',
@@ -676,7 +676,7 @@
 						]
 					},
 					{
-						title: 'Source Control Modules',
+						title: 'Source Control',
 						modules: [
 							{
 								name: 'bzr',
@@ -711,7 +711,7 @@
 						]
 					},
 					{
-						title: 'System Modules',
+						title: 'System',
 						modules: [
 							{
 								name: 'alternatives',
@@ -919,12 +919,12 @@
 						]
 					},
 					{
-						title: 'Utilities Modules',
+						title: 'Utilities',
 						modules: [
 						]
 					},
 					{
-						title: 'Web Infrastructure Modules',
+						title: 'Web Infrastructure',
 						modules: [
 							{
 								name: 'apache2_module',
@@ -971,7 +971,7 @@
 						]
 					},
 					{
-						title: 'Windows Modules',
+						title: 'Windows',
 						modules: [
 							{
 								name: 'win_feature',
