Database Modules: added modules.

--- a/index.htm
+++ b/index.htm
@@ -185,6 +185,76 @@
 					{
 						title: 'Database',
 						modules: [
+							{
+								name: 'mongodb_user',
+								description: 'Adds or removes a user from a MongoDB database',
+								type: 'extras',
+								options: {
+								}
+							},
+							{
+								name: 'redis',
+								description: 'Various redis commands, slave and flush',
+								type: 'extras',
+								options: {
+								}
+							},
+							{
+								name: 'riak',
+								description: 'This module handles some common Riak operations',
+								type: 'extras',
+								options: {
+								}
+							},
+							{
+								name: 'mysql_db',
+								description: 'Add or remove MySQL databases from a remote host',
+								type: 'core',
+								options: {
+								}
+							},
+							{
+								name: 'mysql_replication',
+								description: 'Manage MySQL replication',
+								type: 'extras',
+								options: {
+								}
+							},
+							{
+								name: 'mysql_user',
+								description: 'Adds or removes a user from a MySQL database',
+								type: 'core',
+								options: {
+								}
+							},
+							{
+								name: 'mysql_variables',
+								description: 'Manage MySQL global variables',
+								type: 'core',
+								options: {
+								}
+							},
+							{
+								name: 'postgresql_db',
+								description: 'Add or remove PostgreSQL databases from a remote host',
+								type: 'core',
+								options: {
+								}
+							},
+							{
+								name: 'postgresql_privs',
+								description: 'Grant or revoke privileges on PostgreSQL database objects',
+								type: 'core',
+								options: {
+								}
+							},
+							{
+								name: 'postgresql_user',
+								description: 'Adds or removes a users (roles) from a PostgreSQL database',
+								type: 'core',
+								options: {
+								}
+							}
 						]
 					},
 					{
