Utilities Modules: added modules.

--- a/index.htm
+++ b/index.htm
@@ -991,6 +991,76 @@
 					{
 						title: 'Utilities',
 						modules: [
+							{
+								name: 'accelerate',
+								description: 'Enable accelerated mode on remote node',
+								type: 'core',
+								options: {
+								}
+							},
+							{
+								name: 'fireball',
+								description: 'Enable fireball mode on remote node',
+								type: 'core',
+								options: {
+								}
+							},
+							{
+								name: 'assert',
+								description: 'Fail with custom message',
+								type: 'core',
+								options: {
+								}
+							},
+							{
+								name: 'async_status',
+								description: 'Obtain status of asynchronous task',
+								type: 'core',
+								options: {
+								}
+							},
+							{
+								name: 'debug',
+								description: 'Print statements during execution',
+								type: 'core',
+								options: {
+								}
+							},
+							{
+								name: 'fail',
+								description: 'Fail with custom message',
+								type: 'core',
+								options: {
+								}
+							},
+							{
+								name: 'include_vars',
+								description: 'Load variables from files, dynamically within a task',
+								type: 'core',
+								options: {
+								}
+							},
+							{
+								name: 'pause',
+								description: 'Pause playbook execution',
+								type: 'core',
+								options: {
+								}
+							},
+							{
+								name: 'set_fact',
+								description: 'Set host facts from a task',
+								type: 'core',
+								options: {
+								}
+							},
+							{
+								name: 'wait_for',
+								description: 'Waits for a condition before continuing',
+								type: 'core',
+								options: {
+								}
+							}
 						]
 					},
 					{
