Files Modules: added modules.

--- a/index.htm
+++ b/index.htm
@@ -260,6 +260,97 @@
 					{
 						title: 'Files',
 						modules: [
+							{
+								name: 'acl',
+								description: 'Sets and retrieves file ACL information',
+								type: 'core',
+								options: {
+								}
+							},
+							{
+								name: 'assemble',
+								description: 'Assembles a configuration file from fragments',
+								type: 'core',
+								options: {
+								}
+							},
+							{
+								name: 'copy',
+								description: 'Copies files to remote locations',
+								type: 'core',
+								options: {
+								}
+							},
+							{
+								name: 'fetch',
+								description: 'Fetches a file from remote nodes',
+								type: 'core',
+								options: {
+								}
+							},
+							{
+								name: 'file',
+								description: 'Sets attributes of files',
+								type: 'core',
+								options: {
+								}
+							},
+							{
+								name: 'ini_file',
+								description: 'Tweak settings in INI files',
+								type: 'core',
+								options: {
+								}
+							},
+							{
+								name: 'lineinfile',
+								description: 'Ensure a particular line is in a file, or replace an existing line using a back-referenced regular expression',
+								type: 'core',
+								options: {
+								}
+							},
+							{
+								name: 'replace',
+								description: 'Replace all instances of a particular string in a file using a back-referenced regular expression',
+								type: 'core',
+								options: {
+								}
+							},
+							{
+								name: 'stat',
+								description: 'Retrieve file or file system status',
+								type: 'core',
+								options: {
+								}
+							},
+							{
+								name: 'synchronize',
+								description: 'Uses rsync to make synchronizing file paths in your playbooks quick and easy',
+								type: 'core',
+								options: {
+								}
+							},
+							{
+								name: 'template',
+								description: 'Templates a file out to a remote server',
+								type: 'core',
+								options: {
+								}
+							},
+							{
+								name: 'unarchive',
+								description: 'Copies an archive to a remote location and unpack it',
+								type: 'core',
+								options: {
+								}
+							},
+							{
+								name: 'xattr',
+								description: 'Set/retrieve extended attributes',
+								type: 'core',
+								options: {
+								}
+							},
 						]
 					},
 					{
