Added since_version to Web Infrastructure and Windows modules.
Also changed type of options to object.

--- a/index.htm
+++ b/index.htm
@@ -1086,6 +1086,7 @@
 								name: 'accelerate',
 								description: 'Enable accelerated mode on remote node',
 								type: 'core',
+								since_version: '1.3',
 								options: {
 								}
 							},
@@ -1099,6 +1100,7 @@
 							{
 								name: 'assert',
 								description: 'Fail with custom message',
+								since_version: '1.5',
 								type: 'core',
 								options: {
 								}
@@ -1127,6 +1129,7 @@
 							{
 								name: 'include_vars',
 								description: 'Load variables from files, dynamically within a task',
+								since_version: '1.4',
 								type: 'core',
 								options: {
 								}
@@ -1141,6 +1144,7 @@
 							{
 								name: 'set_fact',
 								description: 'Set host facts from a task',
+								since_version: '1.2',
 								type: 'core',
 								options: {
 								}
@@ -1160,38 +1164,44 @@
 							{
 								name: 'apache2_module',
 								description: 'Enables/disables a module of the Apache2 webserver',
-								options: [
-								]
+								since_version: '1.6',
+								options: {
+								}
 							},
 							{
 								name: 'django_manage',
 								description: 'Manages a Django application',
-								options: [
-								]
+								since_version: '1.1',
+								options: {
+								}
 							},
 							{
 								name: 'ejabberd_user',
 								description: 'Manages users for ejabberd servers',
-								options: [
-								]
+								since_version: '1.5',
+								options: {
+								}
 							},
 							{
 								name: 'htpasswd',
 								description: 'Manages user files for basic authentication',
-								options: [
-								]
+								since_version: '1.3',
+								options: {
+								}
 							},
 							{
 								name: 'jboss',
 								description: 'Deploys applications to JBoss',
-								options: [
-								]
+								since_version: '1.4',
+								options: {
+								}
 							},
 							{
 								name: 'jira',
 								description: 'Create and modify issues in a JIRA instance',
-								options: [
-								]
+								since_version: '1.6',
+								options: {
+								}
 							},
 							{
 								name: 'supervisorctl',
@@ -1207,50 +1217,58 @@
 							{
 								name: 'win_feature',
 								description: 'Installs and uninstalls Windows Features',
-								options: [
-								]
+								since_version: '1.7',
+								options: {
+								}
 							},
 							{
 								name: 'win_get_url',
 								description: 'Fetches a file from a given URL',
-								options: [
-								]
+								since_version: '1.7',
+								options: {
+								}
 							},
 							{
 								name: 'win_group',
 								description: 'Add and remove local groups',
-								options: [
-								]
+								since_version: '1.7',
+								options: {
+								}
 							},
 							{
 								name: 'win_msi',
 								description: 'Installs and uninstalls Windows MSI files',
-								options: [
-								]
+								since_version: '1.7',
+								options: {
+								}
 							},
 							{
 								name: 'win_ping',
 								description: 'A windows version of the classic ping module',
-								options: [
-								]
+								since_version: '1.7',
+								options: {
+								}
 							},
 							{
 								name: 'win_service',
 								description: 'Manages Windows services',
-								options: [
-								]
+								since_version: '1.7',
+								options: {
+								}
 							},
 							{
 								name: 'win_stat',
 								description: 'Returns information about a Windows file',
-								options: [
-								]
+								since_version: '1.7',
+								options: {
+								}
 							},
 							{
 								name: 'win_user',
 								description: 'Manages local Windows user accounts',
-								options: [
-								]
+								since_version: '1.7',
+								options: {
+								}
 							}
 						]
 					}
