Notification Modules: added modules.

--- a/index.htm
+++ b/index.htm
@@ -435,6 +435,104 @@
 					{
 						title: 'Notification',
 						modules: [
+							{
+								name: 'campfire',
+								description: 'Send a message to Campfire',
+								type: 'extras',
+								options: {
+								}
+							},
+							{
+								name: 'flowdock',
+								description: 'Send a message to a flowdock',
+								type: 'extras',
+								options: {
+								}
+							},
+							{
+								name: 'grove',
+								description: 'Sends a notification to a grove.io channel',
+								type: 'extras',
+								options: {
+								}
+							},
+							{
+								name: 'hipchat',
+								description: 'Send a message to hipchat',
+								type: 'extras',
+								options: {
+								}
+							},
+							{
+								name: 'irc',
+								description: 'Send a message to an IRC channel',
+								type: 'extras',
+								options: {
+								}
+							},
+							{
+								name: 'jabber',
+								description: 'Send a message to jabber user or chat room',
+								type: 'extras',
+								options: {
+								}
+							},
+							{
+								name: 'mail',
+								description: 'Send an email',
+								type: 'extras',
+								options: {
+								}
+							},
+							{
+								name: 'mqtt',
+								description: 'Publish a message on an MQTT topic for the IoT',
+								type: 'extras',
+								options: {
+								}
+							},
+							{
+								name: 'nexmo',
+								description: 'Send a SMS via nexmo',
+								type: 'extras',
+								options: {
+								}
+							},
+							{
+								name: 'osx_say',
+								description: 'Makes an OSX computer to speak',
+								type: 'extras',
+								options: {
+								}
+							},
+							{
+								name: 'slack',
+								description: 'Send Slack notifications',
+								type: 'extras',
+								options: {
+								}
+							},
+							{
+								name: 'sns',
+								description: 'Send Amazon Simple Notification Service (SNS) messages',
+								type: 'extras',
+								options: {
+								}
+							},
+							{
+								name: 'twilio',
+								description: 'Sends a text message to a mobile phone through Twilio',
+								type: 'extras',
+								options: {
+								}
+							},
+							{
+								name: 'typetalk',
+								description: 'Send a message to typetalk',
+								type: 'extras',
+								options: {
+								}
+							}
 						]
 					},
 					{
