Monitoring Modules: added modules.

--- a/index.htm
+++ b/index.htm
@@ -425,6 +425,104 @@
 					{
 						title: 'Monitoring',
 						modules: [
+							{
+								name: 'airbrake_deployment',
+								description: 'Notify airbrake about app deployments',
+								type: 'extras',
+								options: {
+								}
+							},
+							{
+								name: 'bigpanda',
+								description: 'Notify BigPanda about deployments',
+								type: 'extras',
+								options: {
+								}
+							},
+							{
+								name: 'boundary_meter',
+								description: 'Manage boundary meters',
+								type: 'extras',
+								options: {
+								}
+							},
+							{
+								name: 'datadog_event',
+								description: 'Posts events to DataDog service',
+								type: 'extras',
+								options: {
+								}
+							},
+							{
+								name: 'librato_annotation',
+								description: 'Creates an annotation in librato',
+								type: 'extras',
+								options: {
+								}
+							},
+							{
+								name: 'logentries',
+								description: 'Module for tracking logs via logentries.com',
+								type: 'extras',
+								options: {
+								}
+							},
+							{
+								name: 'monit',
+								description: 'Manage the state of a program monitored via Monit',
+								type: 'extras',
+								options: {
+								}
+							},
+							{
+								name: 'nagios',
+								description: 'Perform common tasks in Nagios related to downtime and notifications',
+								type: 'extras',
+								options: {
+								}
+							},
+							{
+								name: 'newrelic_deployment',
+								description: 'Notify newrelic about app deployments',
+								type: 'extras',
+								options: {
+								}
+							},
+							{
+								name: 'pagerduty',
+								description: 'Create PagerDuty maintenance windows',
+								type: 'extras',
+								options: {
+								}
+							},
+							{
+								name: 'pingdom',
+								description: 'Pause/unpause Pingdom alerts',
+								type: 'extras',
+								options: {
+								}
+							},
+							{
+								name: 'rollbar_deployment',
+								description: 'Notify Rollbar about app deployments',
+								type: 'extras',
+								options: {
+								}
+							},
+							{
+								name: 'stackdriver',
+								description: 'Send code deploy and annotation events to stackdriver',
+								type: 'extras',
+								options: {
+								}
+							},
+							{
+								name: 'zabbix_maintenance',
+								description: 'Create Zabbix maintenance windows',
+								type: 'extras',
+								options: {
+								}
+							}
 						]
 					},
 					{
