Network Modules: added modules.

--- a/index.htm
+++ b/index.htm
@@ -528,6 +528,132 @@
 					{
 						title: 'Network',
 						modules: [
+							{
+								name: 'a10_server',
+								description: 'Manage A10 Networks AX/SoftAX/Thunder/vThunder devices',
+								type: 'extras',
+								options: {
+								}
+							},
+							{
+								name: 'a10_service_group',
+								description: 'Manage A10 Networks AX/SoftAX/Thunder/vThunder devices',
+								type: 'extras',
+								options: {
+								}
+							},
+							{
+								name: 'a10_virtual_server',
+								description: 'Manage A10 Networks AX/SoftAX/Thunder/vThunder devices',
+								type: 'extras',
+								options: {
+								}
+							},
+							{
+								name: 'bigip_facts',
+								description: 'Collect facts from F5 BIG-IP devices',
+								type: 'extras',
+								options: {
+								}
+							},
+							{
+								name: 'bigip_monitor_http',
+								description: 'Manages F5 BIG-IP LTM http monitors',
+								type: 'extras',
+								options: {
+								}
+							},
+							{
+								name: 'bigip_monitor_tcp',
+								description: 'Manages F5 BIG-IP LTM tcp monitors',
+								type: 'extras',
+								options: {
+								}
+							},
+							{
+								name: 'bigip_node',
+								description: 'Manages F5 BIG-IP LTM nodes',
+								type: 'extras',
+								options: {
+								}
+							},
+							{
+								name: 'bigip_pool',
+								description: 'Manages F5 BIG-IP LTM pools',
+								type: 'extras',
+								options: {
+								}
+							},
+							{
+								name: 'bigip_pool_member',
+								description: 'Manages F5 BIG-IP LTM pool members',
+								type: 'extras',
+								options: {
+								}
+							},
+							{
+								name: 'dnsimple',
+								description: 'Interface with dnsimple.com (a DNS hosting service)',
+								type: 'extras',
+								options: {
+								}
+							},
+							{
+								name: 'dnsmadeeasy',
+								description: 'Interface with dnsmadeeasy.com (a DNS hosting service)',
+								type: 'extras',
+								options: {
+								}
+							},
+							{
+								name: 'get_url',
+								description: 'Downloads files from HTTP, HTTPS, or FTP to node',
+								type: 'core',
+								options: {
+								}
+							},
+							{
+								name: 'lldp',
+								description: 'Get details reported by lldp',
+								type: 'extras',
+								options: {
+								}
+							},
+							{
+								name: 'netscaler',
+								description: 'Manages Citrix NetScaler entities',
+								type: 'extras',
+								options: {
+								}
+							},
+							{
+								name: 'openvswitch_bridge',
+								description: 'Manage Open vSwitch bridges',
+								type: 'extras',
+								options: {
+								}
+							},
+							{
+								name: 'openvswitch_port',
+								description: 'Manage Open vSwitch ports',
+								type: 'extras',
+								options: {
+								}
+							},
+							{
+								name: 'slurp',
+								description: 'Slurps a file from remote nodes',
+								type: 'core',
+								options: {
+								}
+							},
+							{
+								name: 'uri',
+								description: 'Interacts with webservices',
+								type: 'core',
+								options: {
+								}
+							}
 						]
 					},
 					{
