--- a/index.htm
+++ b/index.htm
@@ -9,7 +9,7 @@
 		<!-- TODO: Remove .disabled when all modules will be covered -->
 		<style type="text/css">
 			.js-categories-list .list-group-item:hover,
-			.js-modules-list li.list-group-item:not(.disabled):hover {
+			.js-modules-list .list-group-item:not(.disabled):hover {
 				cursor: pointer;
 			}
 		</style>
@@ -44,7 +44,6 @@
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 		<script>
 			$(document).ready(function() {
-				// data
 				var modulesData = [
 					{
 						title: 'Cloud',
